#61 FIX: postLike 쿠키 수정
