# src/domain/posts/dto/post-like.dto.ts
@@ -2,10 +2,13 @@ import { IsBoolean, IsNotEmpty, IsString } from 'class-validator';
 
 export class PostLikeDto {
     @IsString()
-    @IsNotEmpty({ message: '게시글 아이디가 필요합니다' })
+    @IsNotEmpty()
     postId: string;
 
     @IsBoolean()
-    @IsNotEmpty({ message: '게시글 좋아요 생성인지 삭제인지 알 수 없습니다' })
+    @IsNotEmpty()
     tryToLike: boolean;
+
+    @IsString()
+    postLikeGuestId?: string;
 }
